--- a/pom.xml
+++ b/pom.xml
@@ -91,11 +91,12 @@
             </execution>
           </executions>
 
+          <!-- generator 相关配置 -->
           <configuration>
             <!-- 允许移动生成的文件 -->
             <verbose>true</verbose>
             <!-- 允许自动覆盖文件 -->
-            <overwrite>true</overwrite>
+            <overwrite>false</overwrite>
 
             <configurationFile>
               src/main/resources/mybatis-generator.xml
