--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
       <artifactId>hibernate-validator</artifactId>
       <version>6.0.12.Final</version>
     </dependency>
+
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
